--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
 
 node {
     download = true
-    version = '12.22.1'      // Switch to LTS version compatible with npm
-    npmVersion = '6.14.13'
+    version = '14.17.0'      // Compatible Node.js version
+    npmVersion = '6.14.13'   // Appropriate npm version
 }
 
 repositories.whenObjectAdded { repository ->
