--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
 
 node {
     download = true
-    version = '14.17.0'      // Compatible Node.js version
-    npmVersion = '6.14.13'   // Appropriate npm version
+    version = '16.14.0'      // Newer Node.js LTS version
+    npmVersion = '8.5.5'     // Compatible npm version
 }
 
 repositories.whenObjectAdded { repository ->
