--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
 
 node {
     download = true
-    version = '14.17.0'   // Compatible Node.js version
-    npmVersion = '7.20.3' // Compatible npm version
+    version = '14.17.0'   // Stable Node.js LTS version
+    npmVersion = '6.14.13' // Known compatible npm version
 }
 
 repositories.whenObjectAdded { repository ->
