--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,13 @@ plugins {
 
 node {
     download = true
-    version = '14.17.0'   // Stable Node.js LTS version
-    npmVersion = '6.14.13' // Known compatible npm version
+    version = '12.22.1'   // Compatible Node.js LTS version
+    npmVersion = '6.14.13' // Compatible npm version
 }
 
 repositories.whenObjectAdded { repository ->
     if (repository instanceof IvyArtifactRepository) {
-        repository.metadataSources {
+        repository metadataSources {
             artifact()
         }
     }
